<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_instagram"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/media"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/media"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/userImage"
        app:layout_constraintEnd_toStartOf="@id/follower"
        app:layout_constraintStart_toEndOf="@id/userImage"
        app:layout_constraintTop_toTopOf="@id/userImage">

        <TextView
            android:id="@+id/mediaCount"
            style="@style/ContentCountTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center" />

        <TextView
            style="@style/ContentTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feed"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/follower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/userImage"
        app:layout_constraintEnd_toStartOf="@id/following"
        app:layout_constraintStart_toEndOf="@id/media"
        app:layout_constraintTop_toTopOf="@id/userImage">

        <TextView
            style="@style/ContentCountTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"
            tools:text="0" />

        <TextView
            style="@style/ContentTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/follower"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/userImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/follower"
        app:layout_constraintTop_toTopOf="@id/userImage">

        <TextView
            style="@style/ContentCountTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"
            tools:text="0" />

        <TextView
            style="@style/ContentTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textAlignment="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/userIdText"
        style="@style/ClientIdTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/client_id"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userImage" />

    <TextView
        android:id="@+id/userId"
        style="@style/ClientIdTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/userIdText"
        app:layout_constraintTop_toBottomOf="@id/userImage" />

</androidx.constraintlayout.widget.ConstraintLayout>